# bazel-idea-plugin-usage-sample

./: .gitignore  WORKSPACE
java7/: BUILD
java7/src/main/java/sample/: App.java
java8/: BUILD.bazel
java8/src/main/java/sample/java8/: App.java
java8/src/test/java/sample/java8/: AllTests.java  AppTest.java
lib/junit-4/: BUILD
